--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
 					<h2>About Me</h2>
-					<p>my name is kiki, but i go by many names. i hope to learn a lot in this class</p>
+					<p>my name is kiki, i go by many names. i hope to learn a lot in this class</p>
 			</div>
 
 		</section>
