--- a/lab2/index.html
+++ b/lab2/index.html
@@ -27,7 +27,7 @@
 				<h1>Hello World</h1>
 					<p> My name is Kiki. I am working with my partner Marissa. Understanding
 						HTML is a bit tricky at first, but we got this. Marissa is a chill person and they 
-						have a sweet dog named Coco Puff.
+						have a sweet dog named Coco Puff. :3
 				</p>
 			</div>
 
