--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 2 - ART101/HTML and CSS starter</title>
+	<title>Lab 3 - ART101</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -24,11 +24,33 @@
 	<main id="content">
 		<section>
 			<div id = "chunk1">
-				<h1>Hello World</h1>
-					<p> My name is Kiki. I am working with my partner Marissa. Understanding
-						HTML is a bit tricky at first, but we got this. Marissa is a chill person and they 
-						have a sweet dog named Coco Puff. :3
+				<h1>Kiki Log</h1>
+					<p> My name is Kiki, I don't have much to say about myself. I am graduated from UCSC.
+						I am working in one of the many research labs on campus. I am not really digging the job,
+						but I am very grateful for the opportunity to work here. I still have a lot of searching to do
+						before settling down with a job. Right now, my goal is to go back to school in LA and really look 
+						for what motivates me in my life. 
 				</p>
+			</div>
+
+			<div id = "chunk2">
+				<h2>Current Interests</h2>
+				<p> I've haven't been doing much of anything recently. I've been very tired
+					at the end of each day, so I barely have time to really engage with my hobbies,
+					let alone myself. But I've been making a conscious effort to do other things besides sleep.
+					I've been practicing bass guitar. Often I try to dress up in my personal style and play with my apperence.
+					When I have the energy, I play pool. I think I am not half bad. I have been reading a bit more. 
+					I play on my Nintendo DS a lot.
+					I haven't been drawing as much as I want to do, but I think that I've just been tired of the medium.
+					I want to do something more engaging, but I am not sure what yet. I love working on my cosplays, but I haven't
+					had the chance to do anything with that. So basically a lot of daydreaming jajaja.
+				</p>
+			</div>
+
+			<div id = "image_chunk1">
+				<h3> fugg ass image of myself</h3>
+					<img src = "/img/fugbruh.jpg">
+
 			</div>
 
 		</section>
