--- a/lab2/index.html
+++ b/lab2/index.html
@@ -49,8 +49,7 @@
 
 			<div id = "image_chunk1">
 				<h3> fugg ass image of myself</h3>
-					<img src = "/img/fugbruh.jpg">
-
+					<img src = "/lab2/img/fugbruh.jpg">
 			</div>
 
 		</section>
