--- a/lab2/index.html
+++ b/lab2/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="/Users/kiki/Desktop/art101/lab2/css/lab.css">
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="/Users/kiki/Desktop/art101/lab2/css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
