--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,9 +10,9 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="/Users/kiki/Desktop/art101/lab2/css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="/Users/kiki/Desktop/art101/lab2/css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
