--- a/lab2/index.html
+++ b/lab2/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -50,7 +50,7 @@
 
 			<div id = "image_chunk1">
 				<h3> fugg ass image of myself</h3>
-					<img src = "/lab2/img/fugbruh.jpg">
+					<img src = "img/fugbruh.jpg">
 			</div>
 
 		</section>
